operator/pkg/gateway-api/testdata/gateway/gateway-listener-namespace-isolation/input/gateway-listener-namespace-isolation.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: listener-namespace-isolation
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
  - name: http-all-namespaces
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: http-same-namespace
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-from-different-namespace
  # This is in the backend namespace.
  # It should NOT attach to the Same namespace listener on port 8080
  namespace: gateway-conformance-web-backend
spec:
  parentRefs:
  - name: listener-namespace-isolation
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /from-different-namespace
    backendRefs:
    - name: web-backend
      port: 8080
